# Ball-on-a-plate-control-system

./: .gitignore  README.md  env.cmake.example
common/components/boap_acp/: CMakeLists.txt  boap_acp.c  boap_acp.h
common/components/boap_log/: CMakeLists.txt  boap_log.c  boap_log.h
common/components/boap_mem/: CMakeLists.txt  boap_mem.c  boap_mem.h
common/components/boap_touchscreen/: CMakeLists.txt  boap_touchscreen.c  boap_touchscreen.h
common/include/: boap_common.h  boap_messages.h
controller/: CMakeLists.txt  sdkconfig
controller/components/boap_controller/: CMakeLists.txt  boap_controller.c  boap_controller.h
controller/main/: CMakeLists.txt  main.c
controller/main/src/: boap_controller.c
doc/: Doxyfile
frontend/: setup.cfg  setup.py
frontend/boap/: __init__.py  __main__.py
frontend/boap/acp/: __init__.py  configurator.py  gateway_thread.py  keepalive_thread.py  messages.py  stack.py  transaction_runner.py
frontend/boap/defs/: __init__.py
frontend/boap/gui/: __init__.py  control_panel.py  controller_window.py  log_panel.py  space_trace.py  time_trace.py  trace_panel.py
plant/: CMakeLists.txt  sdkconfig
plant/components/boap_control/: CMakeLists.txt  boap_control.c  boap_control.h
plant/components/boap_event/: CMakeLists.txt  boap_event.c  boap_event.h
plant/components/boap_filter/: CMakeLists.txt  boap_filter.c  boap_filter.h
plant/components/boap_listener/: CMakeLists.txt  boap_listener.c  boap_listener.h
plant/components/boap_pid/: CMakeLists.txt  boap_pid.c  boap_pid.h
plant/components/boap_servo/: CMakeLists.txt  boap_servo.c  boap_servo.h
plant/components/boap_startup/: CMakeLists.txt  boap_startup.c  boap_startup.h
plant/components/boap_stats/: CMakeLists.txt  boap_stats.c  boap_stats.h
plant/include/: boap_events.h
plant/main/: CMakeLists.txt  main.c
plant/main/inc/: boap_listener.h  boap_stats.h
plant/main/src/: boap_control.c  boap_event.c  boap_listener.c  boap_startup.c  boap_stats.c
python/: boap.py  requirements.txt
python/acp/: BoapAcp.py  BoapAcpGateway.py  BoapAcpKeepalive.py  BoapAcpTransactionRunner.py
python/defs/: BoapAcpErrors.py  BoapAcpMessages.py  BoapCommon.py  BoapPlantSettings.py
python/gui/: BoapGui.py  BoapGuiControlPanel.py  BoapGuiControllerWindow.py  BoapGuiLogPanel.py  BoapGuiSpaceTrace.py  BoapGuiTimeTrace.py  BoapGuiTracePanel.py
python/utils/: BoapConfigurator.py  BoapEarlyParser.py  BoapLog.py
router/: CMakeLists.txt
router/components/boap_router/: CMakeLists.txt  boap_router.c  boap_router.h
router/main/: CMakeLists.txt  main.c
router/main/inc/: boap_router.h
router/main/src/: boap_router.c
tools/touchscreen_tuner/: CMakeLists.txt
tools/touchscreen_tuner/main/: CMakeLists.txt  touchscreen_tuner.c
