[metadata]
name = boap_frontend
description = Ball-on-a-plate control application front-end
license = MIT
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages = boap
install_requires =
    numpy>=1.21.4
    PyQt6>=6.2.1
    PyQt6-Qt6>=6.2.1
    PyQt6-sip>=13.1.0
    pyqtgraph>=0.12.3
    pyserial>=3.5
python_requires = >=3.8
