idf_component_register(SRCS "boap_controller.c"
                       INCLUDE_DIRS "."
                       PRIV_INCLUDE_DIRS "../../../common/include"
                       REQUIRES boap_touchscreen
                                boap_acp
                                boap_log)

# Define touchscreen config
target_compile_definitions(${COMPONENT_LIB}
    PRIVATE BOAP_CONTROLLER_SCREEN_DIMENSION_X_AXIS_MM=${BOAP_CONTROLLER_SCREEN_DIMENSION_X_AXIS_MM}
    PRIVATE BOAP_CONTROLLER_SCREEN_DIMENSION_Y_AXIS_MM=${BOAP_CONTROLLER_SCREEN_DIMENSION_Y_AXIS_MM}
    PRIVATE BOAP_CONTROLLER_ADC_LOW_X_AXIS=${BOAP_CONTROLLER_ADC_LOW_X_AXIS}
    PRIVATE BOAP_CONTROLLER_ADC_HIGH_X_AXIS=${BOAP_CONTROLLER_ADC_HIGH_X_AXIS}
    PRIVATE BOAP_CONTROLLER_ADC_LOW_Y_AXIS=${BOAP_CONTROLLER_ADC_LOW_Y_AXIS}
    PRIVATE BOAP_CONTROLLER_ADC_HIGH_Y_AXIS=${BOAP_CONTROLLER_ADC_HIGH_Y_AXIS}
    PRIVATE BOAP_CONTROLLER_GND_PIN_X_AXIS_NUM=${BOAP_CONTROLLER_GND_PIN_X_AXIS_NUM}
    PRIVATE BOAP_CONTROLLER_HIGH_Z_PIN_X_AXIS_NUM=${BOAP_CONTROLLER_HIGH_Z_PIN_X_AXIS_NUM}
    PRIVATE BOAP_CONTROLLER_ADC_PIN_X_AXIS_NUM=${BOAP_CONTROLLER_ADC_PIN_X_AXIS_NUM}
    PRIVATE BOAP_CONTROLLER_ADC_PIN_Y_AXIS_NUM=${BOAP_CONTROLLER_ADC_PIN_Y_AXIS_NUM})
