idf_component_register(SRCS "touchscreen_tuner.c"
                       INCLUDE_DIRS "../../../common/include"
                       PRIV_REQUIRES boap_touchscreen boap_log driver)

# Define touchscreen config
target_compile_definitions(${COMPONENT_LIB}
    PRIVATE BOAP_CONTROL_GND_PIN_X_AXIS_NUM=${BOAP_CONTROL_GND_PIN_X_AXIS_NUM}
    PRIVATE BOAP_CONTROL_HIGH_Z_PIN_X_AXIS_NUM=${BOAP_CONTROL_HIGH_Z_PIN_X_AXIS_NUM}
    PRIVATE BOAP_CONTROL_ADC_PIN_X_AXIS_NUM=${BOAP_CONTROL_ADC_PIN_X_AXIS_NUM}
    PRIVATE BOAP_CONTROL_ADC_PIN_Y_AXIS_NUM=${BOAP_CONTROL_ADC_PIN_Y_AXIS_NUM}
    PRIVATE BOAP_CONTROL_SCREEN_DIMENSION_X_AXIS_MM=${BOAP_CONTROL_SCREEN_DIMENSION_X_AXIS_MM}
    PRIVATE BOAP_CONTROL_SCREEN_DIMENSION_Y_AXIS_MM=${BOAP_CONTROL_SCREEN_DIMENSION_Y_AXIS_MM})
